--- a/MyMBTI-main/start/index.html
+++ b/MyMBTI-main/start/index.html
@@ -8,18 +8,31 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cute+Font&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/qna.css">
+    <link rel="stylesheet" href="./css/animation.css">
 </head>
 <body>
     <div class="container">
-        <section id="main" class="mx-auto mt-5 py-5 px-3">
-            <h3>십이간지로 알아보는 연애유형</h3>
-            <div class="col-6 mx-auto">
+        <section id="main" class="mx-auto my-5 py-5 px-3">
+            <h1>십이간지로 알아보는 연애유형</h1>
+            <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
                 <img src="./img/main.png"  alt="" class="img-fluid">
             <div>
             <p>
-                sjdklfasfj;safsakfsaf
+                나만의 MBTI 사이트입니다! <br> 
+                아래 시작하기 버튼을 눌러 시작해 주십시오.
+            </p>    
+            <button type="button" class="btn btn-danger mt-2"onclick="js:begin()">시작하기</button>
+        </section>
+        <section id="qna">
+            <p>
+                test!
             </p>
-            <button type="button" class="btn btn-danger">시작하기</button>
+        </section>
+        <script src="./js/start.js" charset="UTF-8"></script>
     </div>
 </body>
 </html>
